--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.2.0"
   }
