--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,16 @@
   "name": "security-trails-fork-by-zumbata",
   "version": "1.0.0",
   "description": "URL monitoring app with global state",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
