--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
             --platform managed \
             --region ${{ secrets.GCLOUD_REGION }} \
             --allow-unauthenticated \
-            --set-env-vars SECURITYTRAILS_API_KEY=${{ secrets.SECURITYTRAILS_API_KEY }}
+            --set-env-vars SECURITYTRAILS_API_KEY=${{ secrets.SECURITYTRAILS_API_KEY }} \
             --set-env-vars PORT=4000
